luci-app-ssr-plus: only selete ss-rust for armv8 devices
ss-libev on x86_64 is good enough.

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/lean/luci-app-ssr-plus/Makefile
+++ b/package/lean/luci-app-ssr-plus/Makefile
@@ -58,7 +58,7 @@ config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks
 config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Rust
 	bool "Include Shadowsocks Rust (AEAD cipher only)"
 	depends on aarch64||arm||i386||mips||mipsel||x86_64
-	default y if aarch64||x86_64
+	default y if aarch64
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR
 	bool "Include ShadowsocksR Libev"
