treewide: add mirrors for GitHub Codeload
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/ctcgfw/naiveproxy/Makefile
+++ b/package/ctcgfw/naiveproxy/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=89.0.4389.72-1
 PKG_RELEASE:=2
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://codeload.github.com/klzgrad/naiveproxy/tar.gz/v$(PKG_VERSION)?
+PKG_SOURCE_URL:=@GHCODELOAD/klzgrad/naiveproxy/tar.gz/v$(PKG_VERSION)?
 PKG_HASH:=94b1c3f1e63ecab43eb8006a38ed1a76f1e510364ba651abaef0ec575449f687
 
 PKG_LICENSE:=BSD 3-Clause
