Package ctcgfw: use package-immortalwrt.mk
Moved all duplicate parts to a single .mk file

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/ctcgfw/rtl8189es/Makefile
+++ b/package/ctcgfw/rtl8189es/Makefile
@@ -8,21 +8,19 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=rtl8189es
-PKG_RELEASE:=1
 
-PKG_SOURCE_URL:=https://github.com/jwrdegoede/rtl8189ES_linux.git
 PKG_SOURCE_PROTO:=git
+PKG_SOURCE_REPO:=jwrdegoede/rtl8189ES_linux
 PKG_SOURCE_DATE:=2020-06-15
 PKG_SOURCE_VERSION:=42f293406700988c10655aaa5ee865b411389aeb
 PKG_MIRROR_HASH:=1609e1dd2c8c7b664c9c012ff6b2f04d6a3989573d01b6e31e5988a88b2f8ef0
 
 PKG_MAINTAINER:=Hauke Mehrtens <hauke@hauke-m.de>
-PKG_BUILD_PARALLEL:=1
 
 STAMP_CONFIGURED_DEPENDS := $(STAGING_DIR)/usr/include/mac80211-backport/backport/autoconf.h
 
 include $(INCLUDE_DIR)/kernel.mk
-include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/package-immortalwrt.mk
 
 define KernelPackage/rtl8189es
   SUBMENU:=Wireless Drivers
