--- a/package/ctcgfw/r8168/Makefile
+++ b/package/ctcgfw/r8168/Makefile
@@ -9,10 +9,11 @@ include $(INCLUDE_DIR)/kernel.mk
 
 PKG_NAME:=r8168
 PKG_VERSION:=8.048.03
+PKG_RELEASE:=3
 
 PKG_BUILD_DIR:=$(KERNEL_BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
-include $(INCLUDE_DIR)/package-immortalwrt.mk
+include $(INCLUDE_DIR)/package.mk
 
 define KernelPackage/r8168
   TITLE:=Driver for Realtek r8168 chipsets
