Revert "treewide: add mirrors for GitHub Archives"
This reverts commit 19980fd5b99b03aa0e3874127d8ed396db5f7545.

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/ctcgfw/shadowsocks-rust/Makefile
+++ b/package/ctcgfw/shadowsocks-rust/Makefile
@@ -17,7 +17,7 @@ PKG_RELEASE:=1
 PKG_SOURCE_HEADER:=shadowsocks-v$(PKG_VERSION)
 PKG_SOURCE_BODY:=unknown-linux-musl
 PKG_SOURCE_FOOTER:=tar.xz
-PKG_SOURCE_URL:=@GHREPO/shell-script/openwrt-shadowsocks-rust/releases/download/v$(PKG_VERSION)/
+PKG_SOURCE_URL:=https://github.com/shell-script/openwrt-shadowsocks-rust/releases/download/v$(PKG_VERSION)/
 
 ifeq ($(ARCH),aarch64)
   PKG_SOURCE:=$(PKG_SOURCE_HEADER).aarch64-$(PKG_SOURCE_BODY).$(PKG_SOURCE_FOOTER)
