Revert "treewide: add mirrors for GitHub Codeload"
This reverts commit 9796619efca52ecfb76a41dd5d15606380f55914.

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/ctcgfw/cdnspeedtest/Makefile
+++ b/package/ctcgfw/cdnspeedtest/Makefile
@@ -13,7 +13,7 @@ PKG_VERSION:=1.4.9
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=@GHCODELOAD/XIU2/CloudflareSpeedTest/tar.gz/v$(PKG_VERSION)?
+PKG_SOURCE_URL:=https://codeload.github.com/XIU2/CloudflareSpeedTest/tar.gz/v$(PKG_VERSION)?
 PKG_HASH:=7b7a18b54eae74d70f18105cc9c74822ce05336b2b894c59a388f46430733dcd
 
 PKG_LICENSE:=GPL-3.0
