Package ntlf9t: cleanup Makefiles
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/ntlf9t/pcap-dnsproxy/Makefile
+++ b/package/ntlf9t/pcap-dnsproxy/Makefile
@@ -7,22 +7,29 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=pcap-dnsproxy
-PKG_VERSION:=0.4.9.13
-PKG_RELEASE:=bc9f540
+PKG_BASE_VERSION:=0.4.9.13
+PKG_RELEASE:=$(AUTORELESE)
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/1715173329/Pcap_DNSProxy.git
-PKG_MIRROR_HASH:=74d86515f17a329fe586fc9acb0c0ff3494fd7f39e42ed50f442d247e3205556
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+PKG_SOURCE_DATE:=2019-05-05
 PKG_SOURCE_VERSION:=bc9f540d9febc5f61d24d583dbdbcc858dd817e3
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
-CMAKE_INSTALL:=1
-PKG_BUILD_PARALLEL:=1
+PKG_MIRROR_HASH:=416cea47ef5662c32111c56eeaaaaec4b338e6eddfe98fca0a0d854e00653dc3
+
+PKG_VERSION:=$(PKG_BASE_VERSION)-$(PKG_SOURCE_DATE)-$(call version_abbrev,$(PKG_SOURCE_VERSION))
 
 PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=LICENSE
-
 PKG_MAINTAINER:=Chengr28 <chengr28@gmail.com>
+
+PKG_CONFIG_DEPENDS:= \
+	CONFIG_PCAP_DNSPROXY_LIBSODIUM \
+	CONFIG_PCAP_DNSPROXY_LIBPCAP \
+	CONFIG_PCAP_DNSPROXY_TLS \
+	CONFIG_PCAP_DNSPROXY_LISTENPORT
+
+PKG_BUILD_PARALLEL:=1
+CMAKE_INSTALL:=1
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
@@ -39,15 +46,12 @@ TARGET_CXXFLAGS += -std=c++14
 
 CMAKE_OPTIONS += \
 	-DPLATFORM_OPENWRT=ON \
-	-DENABLE_LIBSODIUM=$(if $(CONFIG_PACKAGE_pcap-dnsproxy_libsodium),ON,OFF) \
-	-DENABLE_PCAP=$(if $(CONFIG_PACKAGE_pcap-dnsproxy_libpcap),ON,OFF) \
-	-DENABLE_TLS=$(if $(CONFIG_PACKAGE_pcap-dnsproxy_tls),ON,OFF)
+	-DENABLE_LIBSODIUM=$(if $(CONFIG_PCAP_DNSPROXY_LIBSODIUM),ON,OFF) \
+	-DENABLE_PCAP=$(if $(CONFIG_PCAP_DNSPROXY_LIBPCAP),ON,OFF) \
+	-DENABLE_TLS=$(if $(CONFIG_PCAP_DNSPROXY_TLS),ON,OFF)
 
-# Port 53 leads to dnsmasq startup failure.
 define Package/pcap-dnsproxy/config
-if PACKAGE_pcap-dnsproxy
-
-	config PACKAGE_pcap-dnsproxy_libpcap
+	config PCAP_DNSPROXY_LIBPCAP
 		bool "Build with libpcap support.(Strongly recommended)"
 		default y
 		help
@@ -55,7 +59,8 @@ if PACKAGE_pcap-dnsproxy
 		  of it to detect poisoned DNS reply.
 
 		  We strongly recommend to keep it as-is.
-	config PACKAGE_pcap-dnsproxy_libsodium
+
+	config PCAP_DNSPROXY_LIBSODIUM
 		bool "Build with libsodium support.(Recommended)"
 		default y
 		help
@@ -63,11 +68,13 @@ if PACKAGE_pcap-dnsproxy
 
 		  We recommend to keep it as-is unless you do NOT
 		  need this protocol anymore.
-	config PACKAGE_pcap-dnsproxy_tls
+
+	config PCAP_DNSPROXY_TLS
 		bool "Build with TLS support.(Recommended)"
 		default y
 		help
 		  We recommend to keep it as-is.
+
 	config PCAP_DNSPROXY_LISTENPORT
 		int "Listen Port, should NOT be 53"
 		default 1053
@@ -75,46 +82,18 @@ if PACKAGE_pcap-dnsproxy
 		  You can customize the listen port of Pcap_DNSProxy.
 		  Note that you should NOT set the value to 53, which
 		  conflicts with DNSMasq in OpenWrt.
-	config PACKAGE_pcap-dnsproxy_advancedoptions
-		bool "Compile with advanced options. (for expert only)"
-		default n
-		help
-		  Enable this option to use link-time optimization and
-		  other GCC compile flags to reduce binary size.
-
-		  Please refer to Makefile for details.
-
-		  Unless you know what you are doing, you
-		  should probably say N here.
-endif
 endef
 
-# Note: GCC 4.6 and 4.8 dont have complete C++11 support
-#       Please use GCC 4.9 or higher to compile
-# uclibcxx is uClibc++, which stands for C++ library for embedded systems.
-# libstdcpp is shipped by GCC project, which usually takes more space than uClibc++.
-# but it has more useful features we need, i.e. full regular expression support.
 define Package/pcap-dnsproxy
-	SECTION:=net
-	CATEGORY:=Network
-	TITLE:=A local DNS server based on LibPcap
-	URL:=https://github.com/chengr28/Pcap_DNSProxy
-	DEPENDS:=+libpthread +libstdcpp +libevent2-core \
-		+PACKAGE_pcap-dnsproxy_libpcap:libpcap \
-		+PACKAGE_pcap-dnsproxy_libsodium:libsodium \
-		+PACKAGE_pcap-dnsproxy_tls:libopenssl \
-		@GCC_VERSION_4_6:BROKEN
+  SECTION:=net
+  CATEGORY:=Network
+  TITLE:=A local DNS server based on LibPcap
+  URL:=https://github.com/chengr28/Pcap_DNSProxy
+  DEPENDS:=+libpthread +libstdcpp +libevent2-core \
+    +PCAP_DNSPROXY_LIBPCAP:libpcap \
+    +PCAP_DNSPROXY_LIBSODIUM:libsodium \
+    +PCAP_DNSPROXY_TLS:libopenssl
 endef
-
-# Some advanced compile flags for expert
-ifneq ($(CONFIG_PACKAGE_pcap-dnsproxy_advancedoptions),)
-	# Try to reduce binary size
-	TARGET_CXXFLAGS += -ffunction-sections -fdata-sections
-	TARGET_LDFLAGS += -Wl,--gc-sections
-	# Use Link time optimization
-	TARGET_CXXFLAGS += -flto
-	TARGET_LDFLAGS += -flto
-endif
 
 define Package/pcap-dnsproxy/conffiles
 /etc/pcap-dnsproxy/Config.conf
@@ -134,7 +113,6 @@ fi
 exit 0
 endef
 
-# Stop and disable service(removing rc.d symlink) before removing
 define Package/pcap-dnsproxy/prerm
 #!/bin/sh
 # check if we are on real system
@@ -156,17 +134,16 @@ define Package/pcap-dnsproxy/install
 	$(INSTALL_DIR) $(1)/etc/hotplug.d/iface
 	$(INSTALL_BIN) ./files/pcap-dnsproxy.hotplug $(1)/etc/hotplug.d/iface/99-pcap-dnsproxy
 	$(INSTALL_DIR) $(1)/etc/pcap-dnsproxy
-	$(SED) 's,^\xEF\xBB\xBF,,g'                                                       $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/*
-	$(SED) 's,\x0D,,g'                                                                $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/*
-	$(SED) 's,Listen Port = 53,Listen Port = $(CONFIG_PCAP_DNSPROXY_LISTENPORT),g'    $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Config.ini
-	$(SED) 's,Log Maximum Size = 8MB,Log Maximum Size = 50KB,g'                       $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Config.ini
-	$(SED) 's,Operation Mode = Private,Operation Mode = Server,g'                     $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Config.ini
+	$(SED) 's,^\xEF\xBB\xBF,,g' $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/*
+	$(SED) 's,\x0D,,g' $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/*
+	$(SED) 's,Listen Port = 53,Listen Port = $(CONFIG_PCAP_DNSPROXY_LISTENPORT),g' $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Config.ini
+	$(SED) 's,Log Maximum Size = 8MB,Log Maximum Size = 50KB,g' $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Config.ini
+	$(SED) 's,Operation Mode = Private,Operation Mode = Server,g' $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Config.ini
 	$(INSTALL_CONF) $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Config.ini $(1)/etc/pcap-dnsproxy/Config.conf
 	$(INSTALL_CONF) $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Hosts.ini $(1)/etc/pcap-dnsproxy/Hosts.conf
 	$(INSTALL_CONF) $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/IPFilter.ini $(1)/etc/pcap-dnsproxy/IPFilter.conf
 	$(INSTALL_CONF) $(PKG_BUILD_DIR)/Source/Auxiliary/ExampleConfig/Routing.txt $(1)/etc/pcap-dnsproxy/Routing.txt
 	$(INSTALL_CONF) ./files/configs/WhiteList.txt $(1)/etc/pcap-dnsproxy/WhiteList.txt
 endef
-
 
 $(eval $(call BuildPackage,pcap-dnsproxy))
