default-settings: dont select lang-en by default
English is the global default language, it's meaningless to depends on
such a separate package.

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/emortal/default-settings/Makefile
+++ b/package/emortal/default-settings/Makefile
@@ -25,7 +25,7 @@ define Package/default-settings
   CATEGORY:=LuCI
   TITLE:=LuCI support for Default Settings
   PKGARCH:=all
-  DEPENDS:=+luci-lib-base +@LUCI_LANG_en
+  DEPENDS:=+luci-lib-base
 endef
 
 define Package/default-settings/config
