--- a/package/boot/arm-trusted-firmware-rockchip-vendor/Makefile
+++ b/package/boot/arm-trusted-firmware-rockchip-vendor/Makefile
@@ -29,38 +29,26 @@ define Package/arm-trusted-firmware-rk3328
     $(Package/arm-trusted-firmware-rockchip-vendor)
     DEPENDS:=@TARGET_rockchip_armv8
     VARIANT:=rk3328
-    ATF:=rk33/rk322xh_bl31_v1.46.elf
-    DDR:=rk33/rk3328_ddr_333MHz_v1.17.bin
-    LOADER:=rk33/rk322xh_miniloader_v2.50.bin
 endef
 
 define Package/arm-trusted-firmware-rk3399
     $(Package/arm-trusted-firmware-rockchip-vendor)
     DEPENDS:=@TARGET_rockchip_armv8
     VARIANT:=rk3399
-    ATF:=rk33/rk3399_bl31_v1.35.elf
-    DDR:=rk33/rk3399_ddr_800MHz_v1.25.bin
-    LOADER:=rk33/rk3399_miniloader_v1.26.bin
 endef
 
 define Build/Configure
 	$(SED) 's,$$$$(PKG_BUILD_DIR),$(PKG_BUILD_DIR),g' $(PKG_BUILD_DIR)/trust.ini
-	$(SED) 's,$$$$(VARIANT),$(VARIANT),g' $(PKG_BUILD_DIR)/trust.ini
+	$(SED) 's,$$$$(VARIANT),$(BUILD_VARIANT),g' $(PKG_BUILD_DIR)/trust.ini
 	$(call Build/Configure/Default)
 endef
 
 define Build/Compile
-	mkimage -n $(VARIANT) -T rksd -d $(PKG_BUILD_DIR)/bin/$(DDR) $(PKG_BUILD_DIR)/$(VARIANT)-idbloader.bin
-	cat $(PKG_BUILD_DIR)/bin/$(LOADER) >> $(PKG_BUILD_DIR)/$(VARIANT)-idbloader.bin
-	$(PKG_BUILD_DIR)/tools/trust_merger --replace bl31.elf $(PKG_BUILD_DIR)/bin/$(ATF) $(PKG_BUILD_DIR)/trust.ini
+	$(CURDIR)/pack-firmware.sh build $(BUILD_VARIANT) '$(PKG_BUILD_DIR)'
 endef
 
 define Build/InstallDev
-	$(INSTALL_DIR) -p $(STAGING_DIR_IMAGE)
-	$(CP) $(PKG_BUILD_DIR)/bin/$(ATF) $(STAGING_DIR_IMAGE)/
-	$(CP) $(PKG_BUILD_DIR)/tools/loaderimage $(STAGING_DIR_IMAGE)/
-	$(CP) $(PKG_BUILD_DIR)/$(VARIANT)-idbloader.bin $(STAGING_DIR_IMAGE)/
-	$(CP) $(PKG_BUILD_DIR)/$(VARIANT)-trust.bin $(STAGING_DIR_IMAGE)/
+	$(CURDIR)/pack-firmware.sh install $(BUILD_VARIANT) '$(PKG_BUILD_DIR)' '$(STAGING_DIR_IMAGE)'
 endef
 
 define Package/arm-trusted-firmware-rk3328/install
