--- a/package/emortal/autocore/Makefile
+++ b/package/emortal/autocore/Makefile
@@ -16,7 +16,7 @@ define Package/autocore-arm
   MAINTAINER:=CN_SZTL
   DEPENDS:=@(arm||aarch64) \
     +TARGET_bcm27xx:bcm27xx-userland \
-    +TARGET_bcm53xx:nvram
+    +TARGET_bcm53xx:nvram \
     +ethtool
   VARIANT:=arm
 endef
